# maestroai

./: README.md  pyproject.toml
maestro/api/: schemas.py  server.py
maestro/cli/: main.py
maestro/core/: config.py  logging.py
maestro/data/: models.py  repository.py
maestro/gmail/: client.py
maestro/nlp/: embeddings.py  indexing.py  llm.py  retrieval.py  summarizer.py
maestro/processing/: html_cleaner.py
maestro/services/: chat_service.py  drafting_service.py  email_ingestion.py  search_service.py
