[project]
name = "maestro"
version = "0.1.0"
description = "Local-first email assistant backend"
requires-python = ">=3.13"
authors = [{ name = "Maestro AI", email = "dev@example.com" }]
readme = "README.md"
license = { text = "MIT" }

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
typer = "^0.12.0"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
html2text = "^2024.2.26"
transformers = "^4.42.0"
sentence-transformers = "^2.7.0"
torch = "^2.3.0"
faiss-gpu = "^1.7.4"
numpy = "^1.26.0"
python-dotenv = "^1.0.1"
"google-api-python-client" = "^2.131.0"
"google-auth-httplib2" = "^0.2.0"
"google-auth-oauthlib" = "^1.2.0"

[project.optional-dependencies]
server = ["uvicorn[standard]"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
